--- a/MergeSort.ipynb
+++ b/MergeSort.ipynb
@@ -66,7 +66,7 @@
     "def MergeSort(list):\n",
     "    n= len(list)\n",
     "    if n <= 1: #if only one element in the list \n",
-    "        result = list \n",
+    "        result = 0   \n",
     "\n",
     "    else:  #if more than one element in the list \n",
     "        mid = n//2 #find the middle point \n",
